<resources>
    <string name="app_name">CharDat</string>
    <string name="addPJ">Añadir Personaje</string>
    <string name="tvName">Nombre</string>
    <string name="ivImagenDesc">Class icon</string>
    <string name="descripcion">Descripción</string>
    <string name="clase">Clase</string>
    <string name="filterPersonaje">Buscar personajes</string>
    <string name="tvDescripcion">Descripción</string>
    <string name="date">Fecha de creación</string>
    <string name="classicon">ClassIcon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreArma">Nombre del arma</string>
    <string name="calidadArma">Calidad</string>
    <string name="turno">Turno</string>
    <string name="habilidadDeAtaque">Habilidad de ataque</string>
    <string name="damage">Daño</string>
    <string name="parry">Parada</string>
    <string name="value">Valor</string>
    <string name="cancelar">Cancelar</string>
    <string name="modificar">Modificar</string>
    <string name="peso">Peso</string>
    <string name="class_icon">Class icon</string>
    <string name="tvClase">Clase</string>
    <string name="nombrePersonaje">Nombre del personaje</string>
    <string name="siguiente">Siguiente</string>
    <string name="extended_fab_content_desc">Añadir</string>
    <string name="agilidad">Agilidad</string>
    <string name="constitucion">Constitución</string>
    <string name="destreza">Destreza</string>
    <string name="fuerza">Fuerza</string>
    <string name="inteligencia">Inteligencia</string>
    <string name="percepcion">Percepción</string>
    <string name="poder">Poder</string>
    <string name="voluntad">Voluntad</string>
    <string name="nivel">Nivel</string>
    <string name="crear">Crear</string>
    <string name="esquiva">Esquiva</string>
    <string name="llevarArmadura">Llevar armadura</string>
    <string name="rm">RM</string>
    <string name="rf">RF</string>
    <string name="rp">RP</string>
    <string name="stamina">Puntos de cansancio</string>
    <string name="hp">Puntos de vida</string>
    <string name="none" />
    <string name="chardat">RPG CharDat</string>
    <string name="nombreArmadura">Armadura</string>
    <string name="fil">FIL</string>
    <string name="con">CON</string>
    <string name="pen">PEN</string>
    <string name="cal">CAL</string>
    <string name="fri">FRI</string>
    <string name="ele">ELE</string>
    <string name="ene">ENE</string>
    <string name="escudo">Escudo</string>
    <string name="objeto">Objeto</string>
    <string name="cantidad">Cantidad</string>
    <string name="arma">Arma</string>
    <string name="info">Stats</string>
    <string name="armas">Armas</string>
    <string name="armaduras">Armaduras</string>
    <string name="objetos">Objetos</string>
    <string name="escudos">Escudos</string>
</resources>