<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.fragmentAddArmadura.AddArmaduraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="216dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:hint="@string/nombreArmadura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/etNombreArmadura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:ignore="LabelFor"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="187dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:hint="@string/calidadArma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/etCalidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:ignore="LabelFor"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="100dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="333dp"
            android:layout_height="100dp"
            android:layout_marginTop="96dp"
            android:hint="@string/descripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="226dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="216dp"
            android:hint="@string/fil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFIL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="216dp"
            android:hint="@string/con"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCON"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="216dp"
            android:hint="@string/pen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPEN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="292dp"
            android:hint="@string/cal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCAL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="292dp"
            android:hint="@string/ele"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etELE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="292dp"
            android:hint="@string/fri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFRI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="368dp"
            android:hint="@string/ene"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etENE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="448dp"
            android:hint="@string/llevarArmadura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etArmadura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="448dp"
            android:hint="@string/value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="448dp"
            android:hint="@string/peso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPeso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="339dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btCancelar"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.897" />

        <Button
            android:id="@+id/btModificar"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/crear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toEndOf="@+id/btCancelar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.897" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>